--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,46 @@
+@import url(https://fonts.googleapis.com/css?family=Rubik:300,regular,500,600,700,800,900,300italic,italic,500italic,600italic,700italic,800italic,900italic);
+
 body {
+  background-color: #ffffff;
+  display: flex;
+  justify-content: center;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
+  font-family: Rubik;
+  color: #0c1821;
+  padding-bottom: 40px;
+}
+#root {
+  display: flex;
+  justify-content: center;
+
+  width: 100%;
+}
+.LockScroll {
+  overflow: hidden;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+p {
+  padding: 0px;
+  margin: 0px;
+  width: fit-content;
+  height: fit-content;
+}
+button,
+svg,
+input,
+path,
+a,
+div {
+  input[type='number']::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+  }
+  font-family: Rubik;
+  transition: 0.3s ease;
 }
 
 code {
