--- a/src/Components/Title/Title.module.scss
+++ b/src/Components/Title/Title.module.scss
@@ -29,6 +29,7 @@
   min-height: 40px;
   outline: none;
   border: none;
+  max-width: 45px;
   background-color: #eaeaea;
   svg {
     width: 100%;
