--- a/src/Components/TokenPopup/TokenPopup.module.scss
+++ b/src/Components/TokenPopup/TokenPopup.module.scss
@@ -101,6 +101,7 @@
       position: absolute;
       top: 0px;
       left: 0px;
+
       width: 100%;
       height: 100%;
       align-items: center;
@@ -323,7 +324,14 @@
 }
 @media screen and (max-height: 500px) {
   .container {
+    .transactionsContent {
+      min-height: 150px;
+    }
+    align-items: start;
     height: 600px;
-    overflow-y: auto !important;
+    .popup {
+      height: 100vh;
+      overflow-y: auto;
+    }
   }
 }
